# agentic_sitemap

./: .gitignore  LICENSE-README.md  LICENSE.md  README.md  config.example.toml  pyproject.toml
docs/: architecture.md  moodle-site-preparation.md  verification-runs.md
schemas/: shared_runtime_contract_v1.json
src/moodle_sitemap/: __init__.py  auth.py  browser.py  cli.py  compare_runs.py  config.py  crawl.py  discover.py  discovery.py  models.py  runtime_contract.py  safety.py  settle.py  settle_compare.py  smoke.py  task_validation.py  task_validation_support.py  timing.py  verify.py  workflow.py  workflow_support.py
src/moodle_sitemap/classify/: __init__.py  page_type.py
src/moodle_sitemap/extract/: __init__.py  dom.py  footer.py  network.py
src/moodle_sitemap/storage/: __init__.py  json_store.py
task-validation/: tasks.json
tests/: conftest.py  test_compare_runs.py  test_config.py  test_crawl.py  test_discover.py  test_discovery.py  test_dom.py  test_footer.py  test_integration_artifacts.py  test_network.py  test_page_type.py  test_runtime_contract.py  test_safety.py  test_schema.py  test_settle.py  test_settle_compare.py  test_task_validation.py  test_timing.py  test_workflow.py
