# Copyright (c) Moodle Pty Ltd. All rights reserved.
# Licensed under the Moodle Community License v1.3.
# See LICENSE.md in the repository root for full terms.
# Commercial use requires a separate written agreement with Moodle.
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-sitemap"
version = "0.1.0"
description = "Phase 1 Moodle-aware authenticated sitemap crawler built on Playwright."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "playwright>=1.45.0",
  "pydantic>=2.7.0,<3.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
moodle-sitemap = "moodle_sitemap.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
